binding & transforming + tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,15 +12,16 @@
     <script src="dom-binding-test.js"></script>
   </head>
   <body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture">
-    <span id="bindable" class='bindable'>(waiting for bind...)</span>
+    <div id="qunit"></div>
+    <div id="qunit-fixture">
+      <span id="bindable" class='bindable'>(waiting for bind...)</span>
 
-    <ul>
-      <li class='multi-bind'>One</li>
-      <li class='multi-bind'>Two</li>
-      <li class='multi-bind'>Three</li>
-    </ul>
-  </div>
+      <ul>
+        <li class='multi-bind one'>One</li>
+        <li class='multi-bind two'>Two</li>
+        <li class='multi-bind three'>Three</li>
+        <li class='multi-bind four'>Four</li>
+      </ul>
+    </div>
   </body>
 </html>
